--- a/Class-Code/Elementary-CA/awu/index.html
+++ b/Class-Code/Elementary-CA/awu/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <h1>Hello, Alex</h1>
+    <h1>Hi there, this is a elementary CA project</h1>
     <script src="sketch.js"></script>
 </body>
 
